# chip-8

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
src/: cpu.rs  interpreter.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  index.js  wasm.js  wasm_bg.wasm
