[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
core = {path = "../core"}
js-sys = "^0.3.69"
wasm-bindgen = "^0.2.92"
web-sys = {version = "^0.3.69", features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "KeyboardEvent",
  "Window"
  ]}

[lib]
crate-type = ["cdylib"]
